force-app/main/default/objects/FINS_Lending_Loan_Application__c/FINS_Lending_Loan_Application__c.object-meta.xml
<CustomObject>
    <description>IDO Mortgage/Lending: used for community user to apply for loan. Can view this is in Customer Communities, it links to internal Opportunity</description>
    <label>Loan Application</label>
    <nameField>
        <label>Loan Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>