force-app/main/default/objects/FINS_Lending_Loan_Application__c/fields/Application_Phase__c.field-meta.xml
<CustomField>
    <fullName>Application_Phase__c</fullName>
    <description>Used for associating a Flow with the Flow Action component</description>
    <label>Application Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>