force-app/main/default/objects/FINS_Lending_Loan_Application__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>X1003_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>