force-app/main/default/objects/FINS_Lending_Loan_Application__c/fields/Borrower_SSN__c.field-meta.xml
<CustomField>
    <fullName>Borrower_SSN__c</fullName>
    <label>Borrower SSN</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>