force-app/main/default/objects/FINS_Lending_Loan_Application__c/fields/Home_Improvement_with_Refi__c.field-meta.xml
<CustomField>
    <fullName>Home_Improvement_with_Refi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Improvement with Refi</label>
    <type>Checkbox</type>
</CustomField>