force-app/main/default/objects/FINS_Lending_Loan_Application__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <label>Loan Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>