force-app/main/default/objects/FINS_Lending_Loan_Application__c/fields/Monthly_Debt_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Debt_Obligations__c</fullName>
    <label>Monthly Debt Obligations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>