force-app/main/default/objects/FINS_Lending_Loan_Application__c/fields/Purchase_or_Refinance__c.field-meta.xml
<CustomField>
    <fullName>Purchase_or_Refinance__c</fullName>
    <label>Purchase or Refinance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Property</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Switching to Cumulus</fullName>
            </value>
            <value>
                <fullName>Cash Out Refinance</fullName>
                <isActive>false</isActive>
                <label>Cash Out Refinance</label>
            </value>
            <value>
                <fullName>Student Loan Cash Out Refinance</fullName>
                <isActive>false</isActive>
                <label>Student Loan Cash Out Refinance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>