force-app/main/default/objects/FINS_Lending_Loan_Application__c/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <description>Retail Loan Applications</description>
    <label>Retail</label>
</RecordType>