force-app/main/default/objects/FINS_Lending_Loan_Application__c/recordTypes/Wholesale.recordType-meta.xml
<RecordType>
    <fullName>Wholesale</fullName>
    <active>true</active>
    <description>For Wholesale Loans</description>
    <label>Wholesale</label>
</RecordType>