force-app/main/default/objects/FINS_Lending_Loan_Application__c/listViews/My_Referred_Loans.listView-meta.xml
<ListView>
    <fullName>My_Referred_Loans</fullName>
    <columns>NAME</columns>
    <columns>Loan_Number__c</columns>
    <columns>Address__c</columns>
    <columns>Borrower__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Referred Loans</label>
</ListView>